# chrome-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
src/chrome_skill/: __init__.py  __main__.py  cli.py  constants.py  daemon_server.py  debug_collector.py  installer.py  installer_common.py  installer_linux.py  installer_mac.py  installer_win.py  report_log.py  rpc_client.py  server.py  skill_registry.py  slim_daemon.py  upgrader.py  vnc_proxy.py  vnc_util.py  websocket_manager.py
